# EthernetFrame

./: README.md
GUI/: GUI.py  GUI.ui  input.txt  output.txt  stateMachine
build-state_machine-Desktop_Qt_6_3_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  output.txt  qtcsettings.cmake  stateMachine  state_machine
build-state_machine-Desktop_Qt_6_3_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-ba30497855d4de49bb8c.json  cmakeFiles-v1-d72a4c8aac570770e8b6.json  codemodel-v2-b0fb4c211de17f9aeb6d.json  codemodel-v2-e127738b7006116c966a.json  directory-.-Debug-07afe2748ff51ec65f05.json  directory-.-Debug-14ea835a817db131241a.json  directory-.-Debug-3956ec79ea640683b0a9.json  index-2022-09-13T12-29-05-0271.json  index-2022-09-13T17-33-19-0350.json  index-2022-09-13T17-59-22-0555.json  index-2022-09-16T19-43-27-0897.json  (+3 more)
build-state_machine-Desktop_Qt_6_3_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
stateMachine/: CMakeLists.txt  a.out  configurationHandler.cpp  configurationHandler.h  frameMachine.cpp  frameMachine.h  frameStates.cpp  frameStates.h  input.txt  main.cpp  output.txt  outputSample.txt  randomGenerator.cpp  randomGenerator.h  state.h  stateMachine.h
state_machine/: CMakeLists.txt  acoolstatemachine.cpp  acoolstatemachine.h  coolstates.cpp  coolstates.h  crc.cpp  crc.h  eventgenerator.cpp  eventgenerator.h  frame_machine.cpp  frame_machine.h  framestates.cpp  framestates.h  main.cpp  randomgenerator.cpp  randomgenerator.h  state.h  statemachine.h
(+82 files in other folders)
